--- a/style.css
+++ b/style.css
@@ -1,15 +1,28 @@
 * {
-    font-size: 16px;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-#table {
+body {
+    background-color:cornsilk;
+}
+
+header>h1 {
+    text-align: center;
+    font-family: monospace;
+    font-size: 40px;
+    margin-top: 20px;
+}
+
+table {
     border: 3px solid black;
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: 200px;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: darkgray;
 }
 
@@ -17,12 +30,30 @@ input[type="button"] {
     width: 100%;
     padding: 20px;
     border-radius: 5px;
-    background-color:azure;
+    background-color:black;
     font-weight: 700;
+    color: white;
+    font-family: monospace;
+    font-size: 18px;
 }
 
 input[type="text"] {
     padding: 20px;
     border-radius: 5px;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-weight: 600;
+}
 
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color:brown;
+    width: 100%;
+    font-size: 20px;
+    font-family: 'Times new roman';
+    font-weight: 600;
+    margin-top: 20px;
+    padding: 20px;
+    text-align: center;
 }
